# mongoose

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: generate_umbrella_header.cmake  get_ms_timestamp.cmake
lib/: CMakeLists.txt
lib/include/: library.h
lib/include/mongoose/: mongoose.hpp  pch.hpp
lib/include/mongoose/__config/: export.hpp
lib/include/mongoose/__module/: dialog.hpp  library.hpp
lib/src/: library.cpp
lib/src/apple/: dialog.mm
lib/src/shared/: library.cpp
tests/: CMakeLists.txt  main.cpp
